--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -15,7 +15,9 @@
         <tr *ngFor="let note of notes">
 
           <!-- Pasar id como parámetro para mostrar notas individualmente-->
-           <td> <a routerLink="/addnote" class="btn btn-info">Edit</a> </td> 
+           <td> <a class="btn btn-info" (click)="getNote(note.id, note.body)">Edit</a> </td> 
+
+           <!-- routerLink="/content"-->
           <td>{{ note.title }}</td>
           <td>{{ note.body }}</td>
           <!--LLamar a funcionalidad de borrar aqui-->
@@ -28,6 +30,8 @@
 </div>
 {{pruebaBindeo}}
 <!--Comunicacion con modulo hijo, dataTemp es variable del hijo y prueba bindeo del padre -->
-<app-note-content [noteBody]='pruebaBody'>
+<app-note-content [noteBody]='currentBody' [noteId]='currentId'>
+
+  
 
 </app-note-content>
