--- a/src/app/note-content/note-content.component.html
+++ b/src/app/note-content/note-content.component.html
@@ -1,21 +1,22 @@
 <div class="card my-5">
   <div class="card-body">
     <!--We link ngSubmit with the onSUbmit (component)-->
-    <form (ngSubmit)="onSubmit()" #noteForm="ngForm">
-   
 
-      <!--We pass the onChange+ variable to content value -->
+    <div *ngIf='note != null'>
+      <form (ngSubmit)="onSubmit()" #noteForm="ngForm">
 
-      <div class="form-group">
+
+        <!--We pass the onChange+ variable to content value -->
+
+        <div class="form-group">
+          <label for="title">Note</label>
+          <input type="text" [(ngModel)]="note.title" class="form-control" id="title" name="title" value="{{note.title}}"
+            placeholder="Enter the note title">
+        </div>
+
+        <div class="form-group">
           <label for="body">Note</label>
-          <input type="text" 
-            class="form-control"
-            id="body"
-            name="body"
-            value="{{noteBody}}"
-            placeholder="Enter the note content"
-           >
-           <textarea></textarea>
+          <textarea [(ngModel)]="note.body" class="form-control" id="body" name="body" rows="10" cols="30" value="{{note.body}}" placeholder="Enter the note content"></textarea>
         </div>
 
         <!--
@@ -32,9 +33,11 @@
 
 
 
-  
-      <button type="submit" [disabled]="!noteForm.form.valid" 
-        class="btn btn-info">Submit</button>
-    </form>
+
+        <button type="submit" [disabled]="!noteForm.form.valid" class="btn btn-info">Submit</button>
+      </form>
+
+    </div>
+
   </div>
 </div>
