--- a/src/app/note-form/note-form.component.html
+++ b/src/app/note-form/note-form.component.html
@@ -1,32 +1,24 @@
 <div class="card my-5">
-    <div class="card-body">
-      <!--We link ngSubmit with the onSUbmit (component)-->
-      <form (ngSubmit)="onSubmit()" #noteForm="ngForm">
+  <div class="card-body">
+    <!--We link ngSubmit with the onSUbmit (component)-->
+    <form (ngSubmit)="onSubmit()" #noteForm="ngForm">
 
-        <div class="form-group">
-          
-            <label for="title">Title</label>
-            <input type="text" [(ngModel)]="note.title" 
-            class="form-control"
-            id="title"
-            name="title"
-            placeholder="Enter the title"
-            required #title="ngModel">
-        </div>
-        <div [hidden]="!title.pristine" class="alert alert-danger">Title is required</div>
+      <div class="form-group">
 
-        <div class="form-group">
-            <label for="body">Note</label>
-            <input type="text" [(ngModel)]="note.body" 
-              class="form-control"
-              id="body"
-              name="body"
-              placeholder="Enter the note content"
-              required #body="ngModel">
-            <div [hidden]="!body.pristine" class="alert alert-danger">note body is required</div>
-          </div>
+        <label for="title">Title</label>
+        <input type="text" [(ngModel)]="note.title" class="form-control" id="title" name="title"
+          placeholder="Enter the title" required #title="ngModel">
+      </div>
+      <div [hidden]="!title.pristine" class="alert alert-danger">Title is required</div>
 
-       <!-- 
+      <div class="form-group">
+        <label for="body">Note</label>
+        <input type="text" [(ngModel)]="note.body" class="form-control" id="body" name="body"
+          placeholder="Enter the note content" required #body="ngModel">
+        <div [hidden]="!body.pristine" class="alert alert-danger">note body is required</div>
+      </div>
+
+      <!-- 
          <div class="form-group">
 
           <label for="title">Title</label>
@@ -50,8 +42,7 @@
         </div>
 
       -->
-        <button type="submit" [disabled]="!noteForm.form.valid" 
-          class="btn btn-info">Submit</button>
-      </form>
-    </div>
+      <button type="submit" [disabled]="!noteForm.form.valid" class="btn btn-info">Submit</button>
+    </form>
   </div>
+</div>
